[project]
name = "brickbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "akshpra", email = "akshay.prabhu@konspec.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
